@@ -1,4 +1,8 @@
-/* This library is free software; you can redistribute it and/or
+/* GTK+ theme engine for the Quartz backend
+ *
+ * Copyright (C) 2007-2008 Imendio AB
+ *
+ * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
  * License as published by the Free Software Foundation; either
  * version 2 of the License, or (at your option) any later version.
@@ -34,8 +38,6 @@ extern GType quartz_type_rc_style;
 struct _QuartzRcStyle
 {
   GtkRcStyle parent_instance;
-
-        //GList *img_list;
 };
 
 struct _QuartzRcStyleClass
