@@ -1,4 +1,8 @@
-/* This library is free software; you can redistribute it and/or
+/* GTK+ theme engine for the Quartz backend
+ *
+ * Copyright (C) 2007-2008 Imendio AB
+ * 
+ * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
  * License as published by the Free Software Foundation; either
  * version 2 of the License, or (at your option) any later version.
@@ -15,8 +19,9 @@
  */
 
 #include <config.h>
+
 #include <gmodule.h>
-#include "gtk/gtk.h"
+#include <gtk/gtk.h>
 
 #include "quartz-style.h"
 #include "quartz-rc-style.h"
